--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,20 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+:root {
+  --body_background_color: #f5f5f5;
+  --body_background_color_dot: rgba(83, 83, 83, 0.8);
+  --body_color: black;
+  --line_color: black;
+}
+/*   #293a4c  */
+[data-theme="dark"] {
+  --body_background_color: #293a4c;
+  --body_background_color_white: #f5f5f5;
+  --body_background_color_dot: #f5f5f5;
+  --body_color: #f5f5f5;
+  --line_color: #f5f5f5;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
+[data-theme="ligth"] {
+  --body_background_color: #23313f;
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+  --body_color: #f5f5f5;
 }
