--- a/src/pages/Notify/styles/notify.scss
+++ b/src/pages/Notify/styles/notify.scss
@@ -39,18 +39,19 @@
   max-width: 700px;
   min-width: 380px;
   border-radius: 20px;
+  min-height: calc(100vh - 250px);
 }
 
 .notify_container {
   max-width: 968px;
-  width: 90%;
+  width: 60%;
   padding: 15px;
   background-color: var(--body_background_color);
   border-radius: 20px;
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3);
   margin-top: 6rem;
   color: var(--body_color);
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
 }
 
 .container .heading {
@@ -120,7 +121,6 @@
 
 .content .text-content {
   width: 100%;
-  height: 700px;
   min-width: 320px;
 }
 
@@ -245,4 +245,17 @@
 
 .rc-pagination-item:hover {
   cursor: pointer;
+}
+
+.switch_button {
+  background: none;
+  &.active {
+    border-color: #646cff;
+  }
+  &:hover {
+    border-color: #646cff;
+  }
+  &:focus {
+    outline: none;
+  }
 }
