(調整) 首頁資料夾結構更新 1. 更改資料夾結構以符合DDD 2. 把首頁swiper元件拆出來 3.  將搜尋功能寫成hook管理

--- a/src/pages/Home/style/index.css
+++ b/src/pages/Home/style/index.css
@@ -70,9 +70,10 @@ main {
 /* Next & previous buttons */
 .prev,
 .next {
+  z-index: 1;
   cursor: pointer;
   position: absolute;
-  top: 45%;
+  top: 30%;
   width: auto;
   margin-top: -1.5rem;
   padding: 0.5rem;
